--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 };
                 
                 $.ajax({
-                    url: 'http://127.0.0.1:5000/submit-form', // Updated to local Flask server
+                    url: 'https://projects-form.vercel.app/', // Updated to local Flask server
                     type: 'POST',
                     contentType: 'application/json',
                     data: JSON.stringify(formData),
