--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 };
                 
                 $.ajax({
-                    url: 'https://projects-form.vercel.app/', // Updated to local Flask server
+                    url: 'projects-form-production.up.railway.app', // Updated to local Flask server
                     type: 'POST',
                     contentType: 'application/json',
                     data: JSON.stringify(formData),
