Resolved merge conflict in index.html

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 };
                 
                 $.ajax({
-                    url: 'https://projects-form.vercel.app/api/submit-form', // Updated to local Flask server
+                    url: 'https://projects-form-ivc9ewflc-aayush-mishras-projects-01e74b98.vercel.app/api/submit-form', // Updated to local Flask server
                     type: 'POST',
                     contentType: 'application/json',
                     data: JSON.stringify(formData),
